--- a/core/src/main/java/org/jivesoftware/gui/LoginPanel.form
+++ b/core/src/main/java/org/jivesoftware/gui/LoginPanel.form
@@ -222,7 +222,7 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Login"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[200, 30]"/>
+              <Dimension value="[205, 30]"/>
             </Property>
           </Properties>
           <Events>
@@ -235,7 +235,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[200, 40]"/>
+              <Dimension value="[220, 40]"/>
             </Property>
           </Properties>
 
@@ -246,12 +246,13 @@
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;u&gt;Create Account&lt;/u&gt; &lt;/html&gt;"/>
+                <Property name="text" type="java.lang.String" value="Create Account"/>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
                 <Property name="borderPainted" type="boolean" value="false"/>
+                <Property name="horizontalTextPosition" type="int" value="10"/>
                 <Property name="opaque" type="boolean" value="false"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="null"/>
+                  <Dimension value="[110, 28]"/>
                 </Property>
               </Properties>
             </Component>
@@ -260,9 +261,13 @@
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;u&gt;Advanced&lt;/u&gt; &lt;/html&gt;"/>
+                <Property name="text" type="java.lang.String" value="Advanced"/>
                 <Property name="borderPainted" type="boolean" value="false"/>
+                <Property name="horizontalTextPosition" type="int" value="10"/>
                 <Property name="opaque" type="boolean" value="false"/>
+                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[90, 28]"/>
+                </Property>
               </Properties>
             </Component>
           </SubComponents>
