Update Roaster Icons and Spacing - Fix appearance null error - Add Right click to Username in Login Panel

--- a/core/src/main/java/org/jivesoftware/gui/LoginUIPanel.form
+++ b/core/src/main/java/org/jivesoftware/gui/LoginUIPanel.form
@@ -136,6 +136,11 @@
               <Dimension value="[200, 30]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tfUsernameMouseEntered"/>
+            <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tfUsernameMouseExited"/>
+            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tfUsernameMousePressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="tfDomain">
           <Properties>
