Update Scrollable Tabs Unread Logic and Disable Componens on Login Process

--- a/core/src/main/java/org/jivesoftware/gui/LoginUIPanel.form
+++ b/core/src/main/java/org/jivesoftware/gui/LoginUIPanel.form
@@ -243,6 +243,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Login"/>
+                <Property name="enabled" type="boolean" value="false"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[210, 30]"/>
                 </Property>
@@ -257,7 +258,6 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Account"/>
-                <Property name="actionCommand" type="java.lang.String" value="Account"/>
                 <Property name="borderPainted" type="boolean" value="false"/>
                 <Property name="horizontalTextPosition" type="int" value="10"/>
                 <Property name="opaque" type="boolean" value="false"/>
