--- a/core/src/main/java/org/jivesoftware/gui/LoginUIPanel.form
+++ b/core/src/main/java/org/jivesoftware/gui/LoginUIPanel.form
@@ -79,7 +79,7 @@
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/images/ripple.gif"/>
+              <Image iconType="3" name="images/icons/light/ripple.gif"/>
             </Property>
             <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
